--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Andy Song # your name (or website title) here
-logo: "/images/Andy.jpg?raw=true" # your photo (or logo) here
+logo: "/images/andysong.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Software Engineer 
   <br><br>
-  Second description 
+   
   <br><br>
   <a href="https://www.linkedin.com/in/andysong-dsat/">View My LinkedIn Profile</a> 
   
